# cywil

./: .coverage  .dockerignore  .env  .env.example  .env.test  .flake8  .gitignore  .mcp.json  .mcp.json.swp  .pylintrc  .roomodes  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  CRON_INSTRUCTIONS.txt  DATABASE_SETUP.md  DEV_ENVIRONMENT.md  Dockerfile  Dockerfile.dev  MIGRATION_SUMMARY.md  MIGRATION_TO_AGENT_SDK.md  OPENAI_SDK_IMPLEMENTATION_SUMMARY.md  PYRIGHT_LINTER_FIXES_MERGED_REPORT.md  PYRIGHT_LINTER_FIXES_REPORT.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  TOOL_EXECUTOR_FIX_SUMMARY.md  Untitled.ipynb  WARP.md  alembic.ini  allowlist_files.txt  auth_token.txt  batch_extract_out.jsonl  batch_input_enriched.jsonl  branch_watcher.out  codebase_architecture.dot  codebase_architecture_detailed.dot  concurrency_gate_script.sh  curl_examples.sh  docker-compose.celery.yml  (+78 more)
.claude/: .settings.local.json.swp  settings.json
.cursor/: .mcp.json  Dockerfile  docker-compose.yml  environment.json  setup-docker.sh  setup-env.sh
.devcontainer/: Dockerfile  devcontainer.json
.roo/: orchestrator-export.yaml
.serena/: project.yml
alembic/: env.py
app/: __init__.py  _database.py_old  alembic.ini  auth.py  auth_routes.py  config.py  database.py  dependencies.py  main.py  main_celery.py  models.py  orchestrator.py  orchestrator_refactored.py  orchestrator_simple.py  routes.py  task_processors.py  tools.py  validator.py
debug_reports/: 0_summary_and_approach.md  1_database_migration_issues.md  2_authentication_issues.md  3_import_dependency_issues.md  4_attribute_access_issues.md  5_core_application_issues.md
deploy/: README.md
deployment/: KUBERNETES_TESTING_PLAN.md  README.md
docs/: AGENT_SPEC_1_OPENAI_SDK.md  AGENT_SPEC_2_EMBEDDING_CENTRALIZATION.md  AGENT_SPEC_3_PIPELINE_VALIDATION.md  AGENT_SPEC_4_SECURITY_CONFIG.md  API_DOCUMENTATION.md  ARCHITECTURE.md  AUDIT_LOGS.md  AUDIT_LOGS_QUICKSTART.md  CELERY_INTEGRATION.md  CELERY_MONITORING.md  CONFIGURATION_CLEANUP.md  DEPLOYMENT_GUIDE.md  HIERARCHY_FIX.md  HIERARCHY_FIX_COMPLETE.md  IMPLEMENTATION_REPORT.md  INGESTION_REFACTORING_GUIDE.md  OPERATIONS_RUNBOOK.md.store  POETRY_SETUP.md  (+7 more)
(+413 files in other folders)
