[project]
name = "ai-paralegal-poc"
version = "0.1.0"
description = "Paralegal AI app"
authors = [
    {name = "zeddq",email = "zeddq1@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.116.1)",
    "pydantic (==2.11.7)",
    "sqlalchemy (==2.0.41)",
    "celery (==5.5.3)",
    "redis (==6.2.0)",
    "asyncpg (==0.30.0)",
    "openai (==1.97.0)",
    "uvicorn[standard] (==0.34.3)",
    "python-jose[cryptography] (==3.5.0)",
    "passlib[bcrypt] (==1.7.4)",
    "python-multipart (==0.0.20)",
    "email-validator (==2.2.0)",
    "aiofiles (==24.1.0)",
    "tenacity (==8.5.0)",
    "pydantic-settings (==2.9.1)",
    "sqlmodel (==0.0.24)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.0"
pytest-asyncio = "1.0.0"
pytest-cov = "5.0.0"
pytest-mock = "3.12.0"
pytest-timeout = "2.2.0"
pytest-html = "4.1.1"
pytest-json-report = "1.5.0"
black = "23.12.0"
flake8 = "6.1.0"
isort = "5.13.2"
mypy = "1.7.1"
pylint = "3.0.3"
factory-boy = "3.3.0"
faker = "20.1.0"
hypothesis = "6.92.1"
aioresponses = "0.7.6"
responses = "0.24.1"
locust = "2.17.0"
python-json-logger = "2.0.7"
qdrant-client = "1.15.1"
types-redis = "4.6.0.11"
types-requests = "2.31.0.10"

